# agentcore

./: .gitignore  README.md  pyproject.toml
.github/workflows/: gemini-dispatch.yml  gemini-review.yml
src/agentcore/: __init__.py  _bootstrap.py  di.py  exceptions.py  log.py  models.py  protocols.py  utils.py
src/agentcore/agents/: __init__.py  base.py  protocols.py  strategies.py
src/agentcore/agents/defaults/: __init__.py  quickstart.py
src/agentcore/presenters/: __init__.py  action.py  base.py  document.py  environment.py  message.py  protocols.py  tool.py
src/agentcore/prompts/: __init__.py  base.py  defaults.py  protocols.py
src/agentcore/services/: __init__.py  embedding.py  openai.py  protocols.py  text.py
src/agentcore/state/: __init__.py  builtins.py  protocols.py
src/agentcore/state/contexts/: __init__.py  action.py  configuration.py  document.py  environment.py  message.py  protocols.py  tool.py
src/agentcore/structures/: __init__.py  protocols.py  registry.py  sequences.py
src/agentcore/telemetry/: __init__.py  base.py  decorators.py  entrypoint.py  protocols.py  utils.py
src/agentcore/telemetry/providers/: factory.py  langfuse.py  logger.py  multi.py
src/agentcore/templates/: macros.jinja
src/agentcore/templates/presenters/: simple.jinja  simple_multiline.jinja
src/agentcore/templates/prompts/: answer.jinja  process_data.jinja  think.jinja  toolbuilder.jinja  toolselector.jinja
src/agentcore/toolset/: __init__.py  base.py  library.py  protocols.py
src/agentcore/toolset/definitions/: __init__.py  process_data.py  think.py  (+1 more)
(+13 files in other folders)
