[project]
name = "agentcore"
version = "0.0.1"
description = "Simple AI Agent Framework"
readme = "README.md"
authors = [
    { name = "Wiktor Jarka", email = "wiktorj@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "httpx>=0.28.1",
    "openai>=1.84.0",
    "pydantic>=2.11.5",
    "tiktoken>=0.9.0",
    "jinja2>=3.1.6",
    "langfuse>=3.3.3",
    "dotenv>=0.9.9",
    "pyyaml>=6.0.2",
]

[project.scripts]
agentcore = "agentcore:main"

[build-system]
requires = ["uv_build>=0.8.9,<0.9.0"]
build-backend = "uv_build"

[tool.basedpyright]
reportAny = false
reportExplicitAny = false
ignore = [".github/*"]


[dependency-groups]
dev = []
